--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/EcovibeLogo.png" />
+  <link rel="icon" type="image/svg+xml" href="/EcovibeLogo.webp" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>EcoVibe Kenya</title>
 </head>
